<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="common_google_play_services_install_title" >Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="auth_client_availability_notification_title">Install/Update/Enable Google Play services</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by %1$s</string>
    <string name="location_client_ulr_inactive_age_under_13">AgeUnder13</string>
    <string name="location_client_ulr_inactive_age_unknown">AgeUnknown</string>
    <string name="location_client_ulr_inactive_unknown_restriction">UnknownRestriction</string>
    <string name="google_maps_key">AIzaSyBkdSYZ6lZN6BtXFxc7qR4EZVJja3fsIy4</string>
    <string name="display_settings">Setting</string>
    <string name="colors">Colorful</string>
    <string name="alarm_per_km">Remind per Km</string>
    <string name="low_power">Low Power Mode</string>
    <string name="alarm_heartrate">Heart Remind</string>
    <string name="alarm_pace">Pace Remind</string>
    <string name="alarm_sports">Sports Remind</string>
    <string name="background_set">Background Set</string>
    <string name="remind_time">Time of reminder</string>
    <string name="heartrate_date">Heartrate</string>
    <string name="setting_heartRate_alarm">over%1$sbmp</string>
    <string name="setting_targetTime_alarm">%1$sh%2$sm%3$ss</string>
    <string name="setting_pace_alarm">%1$sm%2$ss</string>
    <string name="setting_run_alarm">Remind at%1$s:%2$s</string>
    <string name="history_info">History Date</string>
    <string name="total_kcal">Total Energy(Kcal)</string>
    <string name="total_time">Total Time(h/m/s)</string>
    <string name="total_times">Total Times(times)</string>
    <string name="no_records">no recordings</string>
    <string name="no_date">-</string>
    <string name="app_name">KctSports</string>
    <string name="hello_world">hello_world</string>
    <string name="cc_run">Cross-country running</string>
    <string name="cc_run2">Cross-country</string>
    <string name="outdoor_running">Outdoor running</string>
    <string name="walking">Walking</string>
    <string name="indoor_running">Indoor running</string>
    <string name="mountaineering">Mountaineering</string>
    <string name="full_marathon">Full marathon</string>
    <string name="half_marathon">Half marathon</string>
    <string name="riding">Riding</string>
    <string name="tip_string1">Adherence is a quality</string>
    <string name="tip_string2">Exercise is the source of health</string>
    <string name="tip_string3">Exercise makes you forget your troubles</string>
    <string name="tip_string4">Exercise makes people happy</string>
    <string name="tip_string5">"Where there's a will, there's a way"</string>
    <string name="save_tip">"The campaign data will 
be saved in the history"</string>
    <string name="cannot_save_tip">"Too little motion data,this
exercise will not be saved"</string>
    <string name="no_trace_tip">"The track data is not recorded for 
this campaign data"</string>
    <string name="finished">Finished</string>
    <string name="over">over</string>
    <string name="heart_rate_ut">Upper limit of heartrate</string>
    <string name="target_time_take">Target time</string>
    <string name="target_distance">Target distance</string>
    <string name="have_lower">Has been lower than</string>
    <string name="pace_ll">Lower pace limit</string>
    <string name="stop_run">Stop motion</string>
    <string name="time_spent">Used</string>
    <string name="heart_rate">Heartrate</string>
    <string name="distance">Mileage</string>
    <string name="distance_date">Milage</string>
    <string name="energy_cost">Energy</string>
    <string name="velocity">Speed</string>
    <string name="pace">Pace</string>
    <string name="stride_frequency">Step frequency</string>
    <string name="average_stride_frequency">Average step frequency</string>
    <string name="average_pace">Average pace</string>
    <string name="average_speed">Average step speed</string>
    <string name="altitude">Altitude</string>
    <string name="altitude_change">Altitude</string>
    <string name="stored_climbing">Cumulative climb</string>
    <string name="stored_decline">Cumulative decline</string>
    <string name="vertical_velocity">Vertical speed</string>
    <string name="step">step(s)</string>
    <string name="step_count">Step counts</string>
    <string name="kilometer">Km</string>
    <string name="meter">m</string>
    <string name="cm">CM</string>
    <string name="per_kilometer">/km</string>
    <string name="kcal">kcal</string>
    <string name="times_per_minute">times/min</string>
    <string name="km_per_hours">km/h</string>
    <string name="step_per_minuter">step(s)/min</string>
    <string name="per_km">/km</string>
    <string name="minute_per_km">min/km</string>
    <string name="remaining_mileage">Last</string>
    <string name="horizontal_displacement">Hor. displacement</string>
    <string name="vertica_displacement">Ver. displacement</string>
    <string name="horizontal_velocity">Hor. velocity</string>
    <string name="best_pace">Best pace</string>
    <string name="lowest_pace">Lowest pace</string>
    <string name="which_km">Corresponding km</string>
    <string name="max_speed">Highest speed</string>
    <string name="min_speed">Minimum speed</string>
    <string name="max_heartRate">Highest heartrate</string>
    <string name="min_heartRate">Minimum heartrate</string>
    <string name="max_stepSpeed">Highest step frequency</string>
    <string name="min_stepSpeed">Min step frequency</string>
    <string name="ave_stepSpeed">Average step frequency</string>
    <string name="maxStep">Maximum stride</string>
    <string name="minStep">Minimum stride</string>
    <string name="aveStep">Average stride</string>
    <string name="ml_kg_minute">ml/kg/min</string>
    <string name="level">Level</string>
    <string name="max_o2">Maximum oxygen uptake</string>
    <string name="training_intensity">Training intensity</string>
    <string name="total_distance_km">Total mileage(Km)</string>
    <string name="total_time_hms">Total time(h/m/s)</string>
    <string name="wait_to_save">Please wait while data is being stored</string>
    <string name="search">Search</string>
    <string name="place_to_search">"1.Please wear it after GPS positioning 
2.Use GPS in an open space"</string>
    <string name="wait_gps">Waiting for GPS</string>
    <string name="confirm_to_delete">Confirm to delete？</string>
    <string name="delete_completed">"Records can not be recovered or 
recovered after deletion"</string>
    <string name="delete_records">Delete records</string>
    <string name="sports_records">Sports records</string>
    <string name="timing">Timing</string>
    <string name="turn_left">Left slide to continues</string>
    <string name="turn_right">Right slide to pause</string>
    <string name="show_step_width">0</string>
    <string name="show_pace">0</string>
    <string name="show_kcal">0.0</string>
    <string name="find_gps_fail">Find gps fail</string>
    <string name="pass">Pass</string>
    <string name="turn_on_gps">Please turn on gps first</string>
    <string name="start">Start</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="formate_time">00:00:00</string>
    <string name="gps_signal">As the gps signal is weak, a sensor record will be used</string>
    <string name="weak_signal">The gps signal is weak</string>
    <string name="gps_count_text">The number of satellites is:</string>
    <string name="gps_count_calibration">The number of calibrated is:</string>
    <string name="gps_count">0</string>
    <string name="memory_hint">"System space is insufficient, please clean up 
 otherwise it may lead to movement data can not be saved!"</string>
    <string name="user_info">Userinfo</string>
    <string name="gps_hint">gps weak signal</string>
    <string name="sport_history">Sports History</string>
    <string name="sport_setting">Sports Setting</string>
    <string name="sport_marathon_half">Marathon Half</string>
    <string name="sport_marathon_full">Marathon Full</string>
    <string name="sport_walking">Walking</string>
    <string name="sport_mountain">Mountain</string>
    <string name="sport_cross_country">Cross Country</string>
    <string name="sport_run_outdoor">Run OutDoor</string>
    <string name="sport_run_indoor">Run inDoor</string>
    <string name="sport_run_ride">Ride</string>
    <string name="alt_unit">M</string>
    <string name="Unkown">Unknow</string>
</resources>
