<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:id="@+id/main_run_layout" android:background="@drawable/round_shape_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:id="@+id/lin0" android:background="#ff0b447b" android:layout_width="fill_parent" android:layout_height="27.0dip">
        <com.kct.sports.view.LantingTextView android:textSize="11.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/time_spent" />
    </LinearLayout>
    <LinearLayout android:id="@+id/lin1" android:layout_width="fill_parent" android:layout_height="74.0dip" android:layout_below="@id/lin0">
        <Chronometer android:textSize="35.0sp" android:textColor="#ffffffff" android:id="@+id/chronometer" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="100.0dip" android:format="@string/formate_time" android:layout_marginStart="100.0dip" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@+id/lin2" android:background="#ff0b447b" android:layout_width="fill_parent" android:layout_height="27.0dip" android:layout_below="@id/lin1" android:layout_alignParentLeft="true">
        <com.kct.sports.view.LantingTextView android:textSize="11.0sp" android:textColor="#ffffffff" android:gravity="left" android:paddingLeft="28.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/heart_rate" android:layout_weight="0.7" />
        <com.kct.sports.view.LantingTextView android:textSize="11.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@+id/main_mile" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/distance" android:layout_weight="1.0" />
        <com.kct.sports.view.LantingTextView android:textSize="11.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/energy_cost" android:layout_weight="0.7" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@+id/lin3" android:layout_width="fill_parent" android:layout_height="74.0dip" android:layout_below="@id/lin2">
        <TextView android:textSize="35.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@+id/heartRate" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/show_step_width" android:layout_weight="0.7" />
        <TextView android:textSize="35.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@+id/ditance" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
        <com.kct.sports.view.BeBasTextView android:textSize="35.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@+id/kcal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/show_kcal" android:layout_weight="0.7" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@+id/lin4" android:background="#ff0b447b" android:layout_width="fill_parent" android:layout_height="27.0dip" android:layout_below="@id/lin3" android:layout_alignParentLeft="true">
        <com.kct.sports.view.LantingTextView android:textSize="11.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@+id/main_left" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/stride_frequency" android:layout_weight="1.0" />
        <com.kct.sports.view.LantingTextView android:textSize="11.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@+id/main_right" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/pace" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@+id/lin5" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/lin4" android:layout_alignParentLeft="true">
        <com.kct.sports.view.BeBasTextView android:textSize="35.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@+id/man_left_tv" android:layout_width="0.0dip" android:layout_height="81.0dip" android:text="@string/show_step_width" android:layout_weight="1.0" />
        <com.kct.sports.view.BeBasTextView android:textSize="35.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@+id/man_right_tv" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/show_pace" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@+id/lin6" android:background="#ff1c89f2" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_below="@id/lin5" android:layout_alignParentLeft="true">
        <TextView android:textSize="12.0sp" android:textColor="@android:color/black" android:gravity="left" android:id="@+id/show_model" android:paddingLeft="100.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/half_marathon" android:layout_weight="1.2" />
        <TextView android:textSize="18.0sp" android:textColor="@android:color/black" android:gravity="left" android:id="@+id/watch_time" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="2.0" />
    </LinearLayout>
    <LinearLayout android:gravity="bottom|center" android:orientation="horizontal" android:id="@+id/lin7" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_below="@id/lin6" android:layout_alignParentLeft="true">
        <com.kct.sports.view.LantingTextView android:textSize="11.0sp" android:textColor="#ff999999" android:paddingLeft="15.0dip" android:paddingBottom="23.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:text="@string/turn_right" android:drawableLeft="@drawable/arrow_right" android:drawablePadding="8.0dip" />
    </LinearLayout>
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" app:srcCompat="@drawable/cover" />
</RelativeLayout>