<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="@drawable/switch_page_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:paddingTop="94.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="18.0sp" android:textColor="@android:color/white" android:ellipsize="marquee" android:id="@+id/tv_tipString" android:paddingLeft="50.0dip" android:paddingRight="50.0dip" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tip_string1" android:singleLine="true" android:marqueeRepeatLimit="marquee_forever" />
        <TextView android:textColor="#ffdedede" android:id="@+id/tv_save_tip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/save_tip" />
        <Button android:textColor="#ffffffff" android:layout_gravity="center" android:id="@+id/stop" android:background="@drawable/end_btn_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/stop_run" />
    </LinearLayout>
</LinearLayout>