<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@android:color/black" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="25.0dip">
        <LinearLayout android:gravity="center|top" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.kct.sports.view.LantingTextView android:textSize="12.0sp" android:textColor="#ffdedede" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/total_distance_km" />
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <TextView android:textSize="43.0sp" android:textColor="@color/history_text_color" android:id="@+id/history_all_distance" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <com.kct.sports.view.LantingTextView android:textSize="9.0sp" android:textColor="#ff999999" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/total_kcal" />
                    <TextView android:textSize="25.0sp" android:textColor="@android:color/white" android:id="@+id/history_all_kcal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" />
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <com.kct.sports.view.LantingTextView android:textSize="9.0sp" android:textColor="#ff999999" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/total_time" />
                    <TextView android:textSize="25.0sp" android:textColor="@android:color/white" android:id="@+id/history_all_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:gravity="center|top" android:layout_gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip">
            <com.kct.sports.view.LantingTextView android:textColor="#ff999999" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/total_times" />
            <TextView android:textSize="40.0px" android:textColor="@android:color/white" android:id="@+id/total_times" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>