<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.amap.api.maps2d.MapView android:id="@+id/history_map" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <com.google.android.gms.maps.MapView android:id="@+id/google_map" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent"
      xmlns:android="http://schemas.android.com/apk/res/android" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center" android:layout_gravity="center_horizontal" android:orientation="vertical" android:background="@color/translucent" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip">
            <TextView android:textSize="15.0sp" android:textColor="@color/white" android:id="@+id/detail_one_model" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="15.0sp" android:textColor="@color/grey" android:id="@+id/detail_one_time" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <RelativeLayout android:layout_gravity="center|top" android:id="@+id/show_map" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <View android:layout_width="300.0dip" android:layout_height="200.0dip" />
            </RelativeLayout>
            <FrameLayout android:layout_gravity="center" android:id="@+id/show_trace" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <ImageView android:background="@drawable/no_trace_" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <TextView android:textColor="@color/gary" android:layout_gravity="center" android:id="@+id/no_trace_tip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_trace_tip" />
            </FrameLayout>
        </LinearLayout>
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:background="@color/translucent" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:layout_weight="4.0">
            <LinearLayout android:gravity="right" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:layout_weight="1.0" android:layout_marginEnd="10.0dip">
                <TextView android:textSize="9.0sp" android:textColor="#ffcbcbcb" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/total_time_hms" />
                <TextView android:textSize="23.0sp" android:textColor="@android:color/white" android:id="@+id/detail_one_record_time" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout android:gravity="left" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_weight="1.0">
                <TextView android:textSize="9.0sp" android:textColor="#ffcbcbcb" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/total_distance_km" />
                <TextView android:textSize="23.0sp" android:textColor="@android:color/white" android:id="@+id/detail_one_total_distance" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>